reorg all folder + python files

--- a/notebook/Cropping - Method.ipynb
+++ b/notebook/Cropping - Method.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e78c38b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "id": "1794b63d",
    "metadata": {},
@@ -1367,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "id": "2ea9cb1d",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1427,7 @@
     "    cv2.destroyAllWindows()\n",
     "    cv2.waitKey(1)\n",
     "    \n",
-    "def multiple_transformations_tresholding(img_grey, THRESH_MIN=250, THESH_MAX=250):\n",
+    "def multiple_transformations_tresholding(img_grey, file_name, THRESH_MIN=250, THESH_MAX=250):\n",
     "    #THRESH_MIN = 250\n",
     "    #THESH_MAX = 255\n",
     "    ret,thresh1 = cv2.threshold(img_grey,THRESH_MIN,THESH_MAX,cv2.THRESH_BINARY)\n",
@@ -1530,7 +1540,7 @@
     "    images_names = ['Thresh', 'Morph Ex', 'Canny Edged', 'Dilated']\n",
     "    img_stack = np.hstack(images_multidim)\n",
     "\n",
-    "    width = original_with_border.shape[1]\n",
+    "    width = original.shape[1]\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    color = (0, 255, 0) # green\n",
     "    #color = (205, 0, 255) # \n",
